    - debian/postinst: 
      + Fix previous attempt to fix MY_HOSTID being equal to EMPTYID.
      + Fix bogus MY_HOSTID generated by popcon releases affected by #203841.
        Closes: #240603
      + Remove check for an impossible error condition.
    - Add FAQ:
      + Document valid sender domain problem. Closes: #241383
      + Document the noatime problem. Closes: #239939

 -- Bill Allombert <ballombe@debian.org>  Tue, 13 Apr 2004 18:39:19 +0200

popularity-contest (1.17) unstable; urgency=medium

  * Translations
    - Hungarian by VEROK Istvan. Closes: #242288
    - Polish by Bartosz Fenski. Closes: #242360
    - Dutch by Bart Cornelis. Closes: #242382
    - Hebrew by Lior Kaplan
    - Indonesian by Parlin Imanuel Toh. Closes: #243296
  * Petter Reinholdtsen
    - Uploaded with urgency=medium to get the new translations into
      Sarge quickly.

 -- Petter Reinholdtsen <pere@debian.org>  Tue, 13 Apr 2004 10:05:36 +0200

popularity-contest (1.16) unstable; urgency=medium

  * Christian Perrier
    - Updated Korean debconf translation by Changwoo Ryu
    - New Ukrainian debconf translation by Eugeniy Meshcheryakov
      Closes: #239348
    - Updated Danish debconf translation by Morten Brix Pedersen
      Closes: #239824
    - Updated Brazilian portuguese translation by Andre Luis Lopes
      Closes: #240485
    - Updated Spanish debconf translation by Ruben Porras
      Closes: #240723
    - Updated Swedish debconf translation by Andre Dahlqvist
      Closes: #240885
    - Updated Italian debconf translation by Cristian Rigamonti
      Closes: #241130
    - Updated Greek debconf translation by Konstantinos Margaritis
      Closes: #241771
  * Petter Reinholdtsen
    - Uploaded with urgency=medium to get the new translations into
      Sarge quickly.

 -- Christian Perrier <bubulle@debian.org>  Sat,  3 Apr 2004 09:37:33 +0200

popularity-contest (1.15) unstable; urgency=low

  * Bill Allombert
    - Invalidate the submissions after 20 days instead of 10.